<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgUserFrag"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/avt" />

    <TextView
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:padding="20dp"
        android:text="@string/tv_tennguoidung" />

    <EditText
        android:textColor="@color/black"
        android:id="@+id/etUserFrag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tv_tennguoidung"
        android:padding="20dp"
        android:textSize="15dp" />


    <TextView
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/tv_sodienthoai" />

    <EditText
        android:textColor="@color/black"
        android:id="@+id/etEmailFrag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:padding="20dp" />

    <Button
        android:id="@+id/btnCapnhat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:background="@color/text_color"
        android:text="@string/btn_capnhatthongtin" />
</LinearLayout>