<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical">
    <TextView
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:text="@string/password"
        android:gravity="center_horizontal" />
<!--    <TextView-->
<!--        android:layout_marginTop="90dp"-->
<!--        android:layout_marginLeft="5dp"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/password" />-->

<!--    <EditText-->
<!--        android:inputType="textPassword"-->
<!--        android:hint="@string/password"-->
<!--        android:layout_margin="5dp"-->
<!--        android:id="@+id/etOldPass"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content" />-->
    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/bg_login"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newpassword" />

    <EditText
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:hint="@string/newpassword"
        android:layout_margin="10dp"
        android:id="@+id/etNewPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmpassword" />

    <EditText
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:hint="@string/confirmpassword"
        android:layout_margin="10dp"
        android:id="@+id/etConfirmPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:layout_margin="50dp"
        android:id="@+id/btnChangePass"
        android:background="@drawable/ic_vienedit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="OK"/>
    </LinearLayout>

</LinearLayout>